--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '3'
 services:
   server:
     build: .
@@ -10,5 +10,8 @@ services:
     image: mysql
     volumes:
       - ./db/schema:/docker-entrypoint-initdb.d
+      - db_volume:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
+volumes:
+  db_volume:
